--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <span class="label">&#8249;Поддержка&#8250;</span>
             <img
               src="./images/5.jpg"
-              alt="Обсуждение людей за столом "
+              alt="Мужчина стоит за столом с ноутбуком"
               loading="lazy"
               class="img img__contrast"
             />
@@ -364,7 +364,7 @@
             <span class="label">&#8249;Решение&#8250;</span>
             <img
               src="./images/6.jpg"
-              alt="Открытый ноутбук, одна рука показывает на экран, другая рука на тачпаде"
+              alt="Руки печатают по клавиатуре ноутбука"
               loading="lazy"
               class="img img__hue-rotate"
             />
